# small-neural-network-c

./: .gitignore  CMakeLists.txt  README.md
include/: matrix.h  memtrack.h  network.h
src/: main.c  matrix.c  memtrack.c  network.c
tests/: test_matrix.c
